<resources>
    <string name="app_name">Caloriyat</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="how_fit_am_i">How fit am I?</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="how_much_should_i_eat">How much should I eat?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="in_kg">in Kg</string>
    <string name="in_cm">in Cm</string>
    <string-array name="ages">
        <item>Above 24</item>
        <item>Below 24</item>
    </string-array>
</resources>